[package]
name = "tdash"
description = "Create a dashboard where you can see all output from different terminal commands in a layout."
license = "MIT"
keywords = ["terminal", "dashboard", "output", "layout", "tui"]
repository = "https://github.com/caycun/tdash"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
pancurses = "0.17.0"
rand = "0.8.5"
ratatui = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.31"
